tests/expected_output/assign_function_to_int/000001-clang-16.0-x86_64-pc-linux-gnu.txt
assign_function_to_int.c:2:9: error: incompatible pointer to integer conversion initializing 'int' with an expression of type 'int (int, char **)' [-Wint-conversion]
    int a = main;
        ^   ~~~~
dcc explanation: you are attempting to assign main which is a function to an int variable.
Perhaps you are trying to call the function and have forgotten the round brackets and any parameter values.

  See more information here: https://comp1511unsw.github.io/dcc/assign_function_to_int.html
